# tomoro-convfin

./: README.md  REPORT.md  pyproject.toml
agent-ui/: package-lock.json
src/fin_agent/: __init__.py  main.py  settings.py
src/fin_agent/agents/action_generation/: action_planner.py
src/fin_agent/agents/document_parser/: bbox_inspector.py  content_summarizer.py  models.py
src/fin_agent/evaluate/: agent.py  document_parser.py
src/fin_agent/utils/: document_parsing.py
src/fin_agent/workflows/: extract_document_context.py
tests/tools/: test_document_parsing.py
